Fix overflow on family stores page; layout display in print view

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,7 +17,7 @@ $red: #b31000;
 $yellow: yellow;
 
 // https://css-tricks.com/snippets/css/fluid-typography/
-$min_width: 400px;
+$min_width: 375px;
 $max_width: 1500px;
 $min_font: 28px;
 $max_font: 32px;
@@ -73,6 +73,27 @@ a {
 
 p {
 	margin: 1em 0;
+}
+
+/* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+.wrap-long {
+
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
 }
 
 .hover-image {
@@ -244,7 +265,7 @@ p {
 }
 
  #familystores {
-	font-size: 1.5em;
+	@include fluid-type($min_width, $max_width, $min_font, $max_font);
 	vertical-align: top;
 	.label {
 		font-weight: bold;
